--- a/CookingGameApp/app/src/main/res/values/strings.xml
+++ b/CookingGameApp/app/src/main/res/values/strings.xml
@@ -25,6 +25,13 @@
     <string name="instructions">Instructions</string>
     <string name="music_icon">Music Icon</string>
     <string name="settings">Settings</string>
+    <string name="create_new_recipe">Create New Recipe</string>
+    <string name="recipe_name">Recipe Name</string>
+    <string name="step_1_what_to_do">Step 1 - What to do?</string>
+    <string name="step_2_what_to_do">Step 2 - What to do?</string>
+    <string name="step_3_what_to_do">Step 3 - What to do?</string>
+    <string name="step_4_what_to_do">Step 4 - What to do?</string>
+    <string name="save_recipe">SAVE RECIPE</string>
     <string-array name="involves_options">
         <item>Select step type...</item>
         <item>chopping</item>
